// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import busAdapter_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testAdapter.js\\"
const busAdapter_imports = {  }
const busAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const busAdapter = busAdapter_constructor(
      busAdapter_options,
      busAdapter_imports
    )
export default busAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
const busAdapter_constructor = interopRequireDefault(
  __non_webpack_require__(process.env[\\"BUS_ADAPTER\\"])
).default
const busAdapter_imports = {  }
const busAdapter_options = {
  \\"url\\": process.env[\\"BUS_OPTIONS_URL\\"]
}
const busAdapter = busAdapter_constructor(
      busAdapter_options,
      busAdapter_imports
    )
export default busAdapter
"
`;
